--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,8 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <script src="bower_components/sweetalert2/dist/sweetalert2.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="bower_components/sweetalert2/dist/sweetalert2.css">
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -40,7 +42,7 @@
 
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
+              <li><a ng-href="#/registro">Registrarme</a></li>
               <li><a ng-href="#/">Contact</a></li>
             </ul>
           </div>
@@ -81,6 +83,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -88,6 +91,11 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/services/registro.js"></script>
+        <script src="scripts/directives/backimg.js"></script>
+        <script src="scripts/directives/imagen.js"></script>
+        <script src="scripts/controllers/registro.js"></script>
+        <script src="scripts/controllers/articulo.js"></script>
         <!-- endbuild -->
 </body>
 </html>
