--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,8 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <script src="bower_components/sweetalert2/dist/sweetalert2.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="bower_components/sweetalert2/dist/sweetalert2.css">
+   <link rel="stylesheet" type="text/css" href="bower_components/sweetalert2/dist/sweetalert2.css"> 
+
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -25,26 +26,33 @@
     <!-- Add your site or application content here -->
     <div class="header">
       <div class="navbar navbar-default" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="#">AppVentas</a>
+            </div>
 
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-
-            <a class="navbar-brand" href="#/">appVentas</a>
-          </div>
-
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/registro">Registrarme</a></li>
-              <li><a ng-href="#/">Contact</a></li>
-            </ul>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav">
+                <li><a href="#/registro">Registrarme</a></li>
+              </ul>
+              <form id="signin" class="navbar-form navbar-right" role="form">
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                    <input id="email" type="email" class="form-control" name="email" value="" placeholder="Username">
+                </div>
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                    <input id="password" type="password" class="form-control" name="password" value="" placeholder="Password">
+                </div>
+                <button type="submit" class="btn btn-primary">Entrar</button>
+              </form>
+            </div>
           </div>
         </div>
       </div>
@@ -96,6 +104,8 @@
         <script src="scripts/directives/imagen.js"></script>
         <script src="scripts/controllers/registro.js"></script>
         <script src="scripts/controllers/articulo.js"></script>
+        <script src="scripts/services/login.js"></script>
+        <script src="scripts/services/articulo.js"></script>
         <!-- endbuild -->
 </body>
 </html>
