--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,8 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <script src="bower_components/sweetalert2/dist/sweetalert2.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="bower_components/sweetalert2/dist/sweetalert2.css">
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -103,7 +105,6 @@
         <script src="scripts/controllers/articulo.js"></script>
         <script src="scripts/services/login.js"></script>
         <script src="scripts/services/articulo.js"></script>
-        <script src="scripts/services/autorizacion.js"></script>
         <!-- endbuild -->
 </body>
 </html>
