--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,7 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-    <script src="bower_components/sweetalert2/dist/sweetalert2.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="bower_components/sweetalert2/dist/sweetalert2.css">
+    <link rel="stylesheet" href="bower_components/sweetalert2/dist/sweetalert2.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -91,6 +90,8 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
+    <script src="bower_components/es6-promise/es6-promise.js"></script>
+    <script src="bower_components/sweetalert2/dist/sweetalert2.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
