--- a/app/index.html
+++ b/app/index.html
@@ -23,39 +23,26 @@
 
     <!-- Add your site or application content here -->
     <div class="header">
-      <div class="navbar navbar-default" role="navigation">
-          <div class="container-fluid">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="#">AppVentas</a>
-            </div>
-
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-              <ul class="nav navbar-nav">
-                <li><a href="#/registro">Registrarme</a></li>
-              </ul>
-              <form id="signin" class="navbar-form navbar-right" role="form">
-                <div class="input-group">
-                    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                    <input id="email" type="email" class="form-control" name="email" value="" placeholder="Username">
-                </div>
-                <div class="input-group">
-                    <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                    <input id="password" type="password" class="form-control" name="password" value="" placeholder="Password">
-                </div>
-                <button type="submit" class="btn btn-primary">Entrar</button>
-              </form>
-            </div>
+      <nav class="navbar navbar-light bg-faded">
+        <ul class="nav navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#/">APPVENTAS <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#/registro">Registrarme</a>
+          </li>
+        </ul>
+        <form class="form-inline float-xs-right" role="form">
+          <div class="form-group">
+            <input type="text" class="form-control" id="exampleInputEmail3" placeholder="Nombre de usuario" required>
           </div>
-        </div>
-      </div>
+          <div class="form-group">
+            <input type="password" class="form-control" id="exampleInputPassword3" placeholder="Contraseña" required>
+          </div>
+          <button type="submit" class="btn btn-primary">Sign in</button>
+        </form>
+      </nav>
     </div>
-
     <div class="container">
     <div ng-view=""></div>
     </div>
@@ -82,6 +69,7 @@
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/tether/dist/js/tether.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
