--- a/app/index.html
+++ b/app/index.html
@@ -34,10 +34,10 @@
         </ul>
         <form class="form-inline float-xs-right" role="form">
           <div class="form-group">
-            <input type="text" class="form-control" id="exampleInputEmail3" placeholder="Nombre de usuario" required>
+            <input type="text" class="form-control" placeholder="Nombre de usuario" required>
           </div>
           <div class="form-group">
-            <input type="password" class="form-control" id="exampleInputPassword3" placeholder="Contraseña" required>
+            <input type="password" class="form-control"  placeholder="Contraseña" required>
           </div>
           <button type="submit" class="btn btn-primary">Sign in</button>
         </form>
